TP-1423 fix scrollbar spacing

--- a/public/themes/custom/palvelumanuaali/components/03-organisms/view/view.scss
+++ b/public/themes/custom/palvelumanuaali/components/03-organisms/view/view.scss
@@ -377,18 +377,18 @@
       ul > li > ul  {
         position: absolute;
         left: 0;
-        top: -8 * $space;
+        top: $space-quadruple;
         display: none;
         width: 100%;
-        height: 100%;
+        height: 52px;
         @include xl {
+          height: 100%;
           top: -4.5 * $space;
         }
       }
 
       ul:has( li>div.highlight ) {
         display: flex;
-        margin-bottom: calc($space * 8);
         @include xl {
           margin-bottom: $space-four-and-half;
         }
@@ -427,6 +427,8 @@
     flex-direction: row;
     align-items: flex-start;
     overflow: scroll;
+    padding-bottom: 0.8rem;
+    margin-bottom: $space-double;
     @include xl {
       margin: $space-two-and-half auto 0 auto;
       display: flex;
@@ -436,6 +438,7 @@
       gap: 8px;
       flex-shrink: 0;
       flex-wrap: wrap;
+      padding-bottom: unset;
     }
     .form-item-checkbox {
       margin: 0;
@@ -454,14 +457,14 @@
     .nesting-level-1 {
       width: 100%;
       height: 100%;
-      transform: translateY(100%);
-      margin-top: (2*$space);
       display: flex;
       @include large {
         display: block;
       }
       @include xl {
         text-align: center;
+        transform: translateY(100%);
+        margin-top: (2*$space);
       }
 
     }
